--- a/src/styles/Reusables.scss
+++ b/src/styles/Reusables.scss
@@ -450,6 +450,7 @@
   display: flex;
   min-height: 91px;
   position: relative;
+  margin-left: $largeMargin;
 
   &-left {
     display: flex;
